Indicate vcpkg build type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@
 # 
 # The master CMake project file for srcML
 
+set(VCPKG_BUILD_TYPE "release")
+
 cmake_minimum_required(VERSION 3.24)
 
 # Detect if the user has specified CMAKE_OSX_ARCHITECTURES before the project()
