--- a/package/CMakeLists.txt
+++ b/package/CMakeLists.txt
@@ -41,14 +41,12 @@ if(WIN32)
     set(CPACK_GENERATOR "WIX;ZIP")
 elseif(APPLE)
     set(CPACK_GENERATOR "productbuild;TGZ;TBZ2")
+elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")
+    set(CPACK_GENERATOR "TGZ;TBZ2")
+elseif(DISTRO MATCHES "Ubuntu")
+    set(CPACK_GENERATOR "DEB;TGZ;TBZ2")
 else()
-    if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
-        set(CPACK_GENERATOR "TGZ;TBZ2")
-    elseif(DISTRO MATCHES "Ubuntu")
-        set(CPACK_GENERATOR "DEB;TGZ;TBZ2")
-    else()
-        set(CPACK_GENERATOR "RPM;TGZ;TBZ2")
-    endif()
+    set(CPACK_GENERATOR "RPM;TGZ;TBZ2")
 endif()
 message(STATUS "CPack generators: ${CPACK_GENERATOR}")
 
@@ -126,13 +124,13 @@ if(NOT MSVC)
 endif()
 
 # specific configurations
-if (CPACK_GENERATOR MATCHES "RPM")
+if(CPACK_GENERATOR MATCHES "RPM")
     include(rpm.cmake)
-elseif (CPACK_GENERATOR MATCHES "DEB")
+elseif(CPACK_GENERATOR MATCHES "DEB")
     include(debian.cmake)
-elseif (WIN32)
+elseif(CPACK_GENERATOR MATCHES "WIX")
     include(nsis.cmake)
-elseif (APPLE)
+elseif(CPACK_GENERATOR MATCHES "productbuild")
     include(macos.cmake)
 endif()
 
