Refactor test case generation by replacing test with removing from list

--- a/test/client/testsuite/CMakeLists.txt
+++ b/test/client/testsuite/CMakeLists.txt
@@ -21,12 +21,12 @@
 
 # add client tests
 file(GLOB CLIENT_TESTS *.sh)
+list(REMOVE_ITEM CLIENT_TESTS "${CMAKE_CURRENT_SOURCE_DIR}/framework_test.sh")
+
 foreach(CLIENT_TEST ${CLIENT_TESTS})
     get_filename_component(TEST_NAME ${CLIENT_TEST} NAME)
 
-    if(NOT TEST_NAME STREQUAL "framework_test.sh")
-        add_test(NAME ${TEST_NAME} COMMAND ${CLIENT_TEST})
-        # Command line --timeout does NOT override this value
-        #set_tests_properties(${TEST_NAME} PROPERTIES TIMEOUT 10) 
-    endif()
+    add_test(NAME ${TEST_NAME} COMMAND ${CLIENT_TEST})
+    # Command line --timeout does NOT override this value
+    #set_tests_properties(${TEST_NAME} PROPERTIES TIMEOUT 10)
 endforeach()
