Add prefix of 'libsrcml.' to libsrcml unit test names

--- a/test/libsrcml/testsuite/CMakeLists.txt
+++ b/test/libsrcml/testsuite/CMakeLists.txt
@@ -28,11 +28,11 @@ foreach(LIB_TEST ${LIB_TESTS})
     add_executable(${TEST_NAME} ${LIB_TEST})
     target_link_libraries(${TEST_NAME} ${LIBSRCML_LINK})
     set(TEST_DIR ${CMAKE_BINARY_DIR}/bin/tmp/${TEST_NAME})
-    add_test(NAME ${TEST_NAME} COMMAND $<TARGET_FILE:${TEST_NAME}>
+    add_test(NAME libsrcml.${TEST_NAME} COMMAND $<TARGET_FILE:${TEST_NAME}>
              WORKING_DIRECTORY ${TEST_DIR})
     file(MAKE_DIRECTORY ${TEST_DIR})
     set_target_properties(${TEST_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-    set_tests_properties(${TEST_NAME} PROPERTIES TIMEOUT 15)
+    set_tests_properties(libsrcml.${TEST_NAME} PROPERTIES TIMEOUT 15)
 
     configure_file(copy.xsl ${TEST_DIR}/copy.xsl COPYONLY)
     configure_file(setlanguage.xsl ${TEST_DIR}/setlanguage.xsl COPYONLY)
