Use PROJECT_IS_TOP_LEVEL

--- a/examples/libsrcml/CMakeLists.txt
+++ b/examples/libsrcml/CMakeLists.txt
@@ -24,7 +24,7 @@ file(GLOB EXAMPLES "srcml_*.c")
 
 install(FILES ${EXAMPLES} DESTINATION share/srcml/examples COMPONENT EXAMPLES)
 
-if(BUILD_EXAMPLES)
+if(BUILD_EXAMPLES OR PROJECT_IS_TOP_LEVEL)
 
     set(CMAKE_C_STANDARD 99)
 
