Generate external cmake packages

--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -75,7 +75,8 @@ add_library(parser OBJECT
 )
 target_include_directories(parser SYSTEM PUBLIC ${antlrsrc_SOURCE_DIR}/lib/cpp)
 target_include_directories(parser PRIVATE . ${CMAKE_GENERATED_SOURCE_DIR} PUBLIC . SYSTEM PUBLIC ${CMAKE_GENERATED_SOURCE_DIR})
-target_link_libraries(parser PRIVATE LibXml2::LibXml2 TinySHA1 antlr)
+target_link_libraries(parser PRIVATE LibXml2::LibXml2 antlr)
+target_include_directories(parser PRIVATE $<TARGET_PROPERTY:TinySHA1,INTERFACE_INCLUDE_DIRECTORIES>)
 
 # With MSVC, interprocedural optimization leads to a 10x static library, with only a slight reduction in size for the dynamic library
 set_target_properties(parser PROPERTIES INTERPROCEDURAL_OPTIMIZATION $<IF:$<CXX_COMPILER_ID:MSVC>,OFF,ON> POSITION_INDEPENDENT_CODE ON)
