--- a/examples/libsrcml/CMakeLists.txt
+++ b/examples/libsrcml/CMakeLists.txt
@@ -31,8 +31,7 @@ if(BUILD_EXAMPLES OR PROJECT_IS_TOP_LEVEL)
     foreach(EXAMPLE ${EXAMPLES})
         get_filename_component(EXAMPLE_NAME ${EXAMPLE} NAME_WE)
         add_executable(${EXAMPLE_NAME} ${EXAMPLE})
-        target_include_directories(${EXAMPLE_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/src/libsrcml)
-        target_link_libraries(${EXAMPLE_NAME} libsrcml_link)
+        target_link_libraries(${EXAMPLE_NAME} LibsrcML::LibsrcML)
         set_target_properties(${EXAMPLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
     endforeach()
 
