--- a/examples/libsrcml/CMakeLists.txt
+++ b/examples/libsrcml/CMakeLists.txt
@@ -36,7 +36,7 @@ if(BUILD_EXAMPLES OR PROJECT_IS_TOP_LEVEL)
 
     set(CMAKE_C_STANDARD 99)
 
-    foreach(EXAMPLE IN LISTS ${EXAMPLES})
+    foreach(EXAMPLE IN ITEMS ${EXAMPLES})
         get_filename_component(EXAMPLE_NAME ${EXAMPLE} NAME_WE)
         add_executable(${EXAMPLE_NAME} ${EXAMPLE})
         target_link_libraries(${EXAMPLE_NAME} LibsrcML::LibsrcML)
