Add debug for windows install

--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -112,6 +112,7 @@ if(NOT WIN32)
 else()
     set(CONFIG_FILE_DESTINATION "${CMAKE_INSTALL_PREFIX}")
 endif()
+message("CONFIG_FILE_DESTINATION: ${CONFIG_FILE_DESTINATION}")
 
 install(EXPORT libsrcml_shared_Targets
         DESTINATION "${CONFIG_FILE_DESTINATION}"
