Try a trick with CONFIG_FILE_DESTINATION

--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -110,7 +110,7 @@ include(CMakePackageConfigHelpers)
 if(NOT WIN32)
     set(CONFIG_FILE_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/libsrcml")
 else()
-    set(CONFIG_FILE_DESTINATION "${CMAKE_INSTALL_PREFIX}")
+    set(CONFIG_FILE_DESTINATION "${CMAKE_INSTALL_LIBDIR}/..")
 endif()
 message("CONFIG_FILE_DESTINATION: ${CONFIG_FILE_DESTINATION}")
 
