--- a/.github/workflows/BuildWindows.yml
+++ b/.github/workflows/BuildWindows.yml
@@ -38,6 +38,19 @@ jobs:
           export UseMultiToolTask=true
           cmake .. -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake -DCMAKE_CXX_COMPILER=cl -DCMAKE_C_COMPILER=cl -DCMAKE_VERBOSE_MAKEFILE=ON
 
+      - name: View vcpkg cache
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          ls -lhR D:/a/srcML/b/vcpkg_cache
+          ls -lhR D:/a/srcML/srcML/vcpkg
+          ls -lhR D:/a/srcML/srcML/vcpkg/installed
+          ls -lhR D:/a/srcML/srcML/vcpkg/vcpkg_installed
+          ls -lhR D:/a/srcML/srcML/vcpkg/packages
+          ls -lhR D:/a/srcML/srcML/vcpkg/buildtrees
+          ls -lhR D:/a/srcML/srcML/vcpkg/downloads
+
       - name: Build
         shell: bash
         working-directory: build
@@ -46,24 +59,24 @@ jobs:
           export UseMultiToolTask=true
           cmake --build . --config Release
 
-      - name: Package
-        working-directory: build
-        continue-on-error: true
-        run: |
-          cpack -V
-      - uses: actions/upload-artifact@v3
-        with:
-          name: wix.log
-          if: failure()
-          path: build/dist/_CPack_Packages/win64/WIX/wix.log
-      - uses: actions/upload-artifact@v3
-        with:
-          name: Installers
-          path: build/dist/*.msi
-      - uses: actions/upload-artifact@v3
-        with:
-          name: CPack
-          path: build/dist/_CPack_Packages/
+      # - name: Package
+      #   working-directory: build
+      #   continue-on-error: true
+      #   run: |
+      #     cpack -V
+      # - uses: actions/upload-artifact@v3
+      #   with:
+      #     name: wix.log
+      #     if: failure()
+      #     path: build/dist/_CPack_Packages/win64/WIX/wix.log
+      # - uses: actions/upload-artifact@v3
+      #   with:
+      #     name: Installers
+      #     path: build/dist/*.msi
+      # - uses: actions/upload-artifact@v3
+      #   with:
+      #     name: CPack
+      #     path: build/dist/_CPack_Packages/
 
       - name: Install package
         working-directory: build/dist
